# ShinBot

./: .codex-fix-prompt.md  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  PLANNING.md  README.md  agent.example.toml  compose.ghcr.yml  config.example.toml  config.reference.toml  config.schema.toml  config.toml  main.py  pyproject.toml
.github/workflows/: ci.yml  dashboard-ci.yml  python-ci.yml  webui-dist-r2.yml
_archive/tests/: test_attention_consumption.py  test_attention_tools.py  test_workflow_runner.py
dashboard/: .env  .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/src/: App.vue  main.ts  router.ts
dashboard/tests/: capture-page.mjs  design-audit.mjs
deploy/: README.md  update-framework.example.sh
docs/: README.md  plugin-security.md  reverse-proxy.md
docs/architecture/: README.md  agent_context_boundary.md  agent_module_layers.md  design_principles.md
docs/archive/: README.md
docs/dashboard/: README.md  design-review.md  implementation_guide.md
docs/deployment/: ghcr-compose.md
docs/design/: 00_core_philosophy.md  02_message_element_spec.md  05_permission_system.md  06_message_egress_spec.md  07_plugin_system_design.md  08_tech_stack_design.md  09_adapter_interface_spec.md  10_glossary.md  11_internal_api_registry.md  12_system_boot_lifecycle.md  13_webui_design_spec.md  14_i18n_management_spec.md  15_webui_component_spec.md  16_api_communication_spec.md  README.md  config_provider_schema.md  webui_plugin_install.md
docs/internals/: 01_ast_and_serialization.md  02_workflow_engine.md  03_adapter_abstraction.md  04_plugin_lifecycle.md  05_business_logic_infra.md  06_code_quality_report.md  07_plugin_system_impl.md  08_work_completion.md  09_completion_summary.md  10_quick_reference.md  README.md  adapter_abstraction.md  business_logic_infra.md  plugin_lifecycle.md
docs/plugins/: 01_getting_started.md  02_project_structure.md  03_commands.md  04_events.md  05_storage.md  06_configuration.md  07_localization.md  10_lifecycle.md  16_api_reference.md  17_examples.md  18_faq.md  README.md  api_reference.md  capabilities.md  commands.md  configuration.md  events.md  examples.md  faq.md  getting_started.md  lifecycle.md  localization.md  project_structure.md  storage.md
docs/references/: README.md
scripts/: migrate_legacy_config_data.py  sanitize_legacy_audit_media.py  test_audit.py
shinbot/: __init__.py
shinbot/admin/: __init__.py  agent_admin.py  agent_runtime_diagnostics.py  bot_config_admin.py  command_admin.py  context_strategy_admin.py  instance_admin.py  instance_config_admin.py  persona_admin.py  persona_files.py  plugin_admin.py  plugin_install.py  plugin_marketplace.py  (+1 more)
tests/: README.md  agent_runtime_helpers.py  conftest.py  test_active_chat_summary_on_exit.py  test_adapter_manager.py  test_agent_active_chat_policy.py  test_agent_active_chat_runner.py  test_agent_active_chat_tool_loop.py  test_agent_active_chat_workflow.py  test_agent_priority_policy.py  test_agent_review_policy.py  test_agent_review_workflow.py  test_agent_runtime.py  test_agent_scheduler.py  test_agent_scheduler_repository.py  test_agent_scheduler_stores.py  test_agent_summaries_service.py  test_agents_api.py  test_app.py  test_astrbot_import.py  test_attention_consumption.py  test_attention_engine.py  test_auth_api.py  test_boot_runtime.py  test_bot_configs_api.py  test_bot_runtime_config.py  test_bot_runtime_routing.py  test_bot_service_config.py  test_command.py  test_config_api.py  test_config_provider.py  test_config_providers_api.py  test_config_schema.py  test_context_strategies_api.py  test_debug_message_plugin.py  test_debug_model_plugin.py  test_elements.py  test_event_bus.py  test_events.py  test_health.py  (+34 more)
(+1344 files in other folders)
