[project]
name = "shinbot"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "litellm>=1.83.12",
    "lxml>=6.0.3",
    "pillow>=11.2.1",
    "psutil>=6.0.0",
    "prompt_toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pyjwt>=2.9.0",
    "tomli-w>=1.1.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shinbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (we have line-length = 100)
    "W605",  # Invalid escape sequence
]

[tool.ruff.lint.isort]
known-first-party = ["shinbot"]
