[project]
name = "shinbot"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "litellm>=1.83.12",
    "lxml>=6.0.3",
    "pillow>=11.2.1",
    "psutil>=6.0.0",
    "prompt_toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pyjwt>=2.9.0",
    "tomli-w>=1.1.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
cron = ["apscheduler>=3.10,<4"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shinbot*"]
exclude = ["shinbot.agent._archive*"]

[tool.setuptools.package-data]
"shinbot.agent" = ["personas/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers --maxfail=1"
asyncio_mode = "auto"
markers = [
    "unit: fast unit-level tests with isolated dependencies",
    "api: tests for HTTP API routes and API-facing contracts",
    "integration: tests that cover cross-module interactions or external boundaries",
    "slow: tests expected to have noticeably longer execution time",
    "e2e: end-to-end scenario tests",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0,<1.17",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.7.0",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (we have line-length = 100)
    "W605",  # Invalid escape sequence
]

[tool.ruff.lint.isort]
known-first-party = ["shinbot"]

[tool.mypy]
python_version = "3.12"
files = ["shinbot"]
ignore_missing_imports = true
follow_imports = "skip"
warn_return_any = false
warn_unused_configs = true
disable_error_code = [
    "no-any-return",
    "valid-type",
    "attr-defined",
    "union-attr",
    "arg-type",
    "call-overload",
    "var-annotated",
    "assignment",
    "misc",
    "return-value",
    "call-arg",
    "no-redef",
    "return",
]
